- Titlebar     - settingsButton bring back hover and active styles     - added small border-radius to buttons - DropDown fix spacing - Rename Settings components from Pascal_Snake_Case to PascalCase to match other components - Changes in CHANGELOG and TODO

--- a/electron-vite-project/src/components/DropDown.css
+++ b/electron-vite-project/src/components/DropDown.css
@@ -16,20 +16,18 @@
 
 .dropdown {
   position: absolute;
-  top: 24px;
-
+  top: 23px;
+  left: 4px;
   border: 1px solid var(--onepStroke);
-  border-radius: 0 5px 5px;
+  border-radius: 5px;
   box-shadow: var(--shadowLight);
-
   background-color: var(--fillUltraThick);
   backdrop-filter: blur(30px);
   -webkit-backdrop-filter: blur(30px);
-
   color: var(--primary);
   text-align: left;
   overflow: hidden;
-  min-width: 140px;
+  min-width: 145px;
 }
 
 .dropdown > p {
